clusters/cl01tl/manifests/frigate/Deployment-frigate.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frigate
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: frigate
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: frigate
    helm.sh/chart: frigate-5.2.1
  namespace: frigate
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/name: frigate
      app.kubernetes.io/instance: frigate
  template:
    metadata:
      annotations:
        checksum/configMaps: f58d037aa819abc4deb059dcb72f54c61cbe26181c750d6ad64b8f03aeadbae6
      labels:
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: frigate
        app.kubernetes.io/name: frigate
    spec:
      enableServiceLinks: false
      serviceAccountName: frigate
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      hostIPC: false
      hostNetwork: false
      hostPID: false
      dnsPolicy: ClusterFirst
      containers:
        - env:
            - name: TZ
              value: America/Chicago
            - name: FRIGATE_RTSP_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: rtsp-password
                  name: frigate-secrets
            - name: FRIGATE_LITELLM_API_KEY
              valueFrom:
                secretKeyRef:
                  key: litellm-api-key
                  name: frigate-secrets
            - name: FRIGATE_TAPO_USER
              valueFrom:
                secretKeyRef:
                  key: user
                  name: it06cm-config
            - name: FRIGATE_TAPO_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: it06cm-config
          image: ghcr.io/blakeblackshear/frigate:0.18.0@sha256:b1f339cf08ae9148b0fac4295cf59f8e158455f6e72d29af32b773a3d8129851
          livenessProbe:
            httpGet:
              path: /
              port: 5000
          name: main
          readinessProbe:
            httpGet:
              path: /
              port: 5000
          resources:
            limits:
              gpu.intel.com/i915: 1
            requests:
              cpu: 100m
              gpu.intel.com/i915: 1
              memory: 2Gi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add:
                - CHOWN
                - DAC_OVERRIDE
                - FOWNER
                - SETGID
                - SETUID
              drop:
                - ALL
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /
              port: 5000
          volumeMounts:
            - mountPath: /tmp/cache
              name: cache
            - mountPath: /config
              name: config
            - mountPath: /config/config.yml
              name: config-file
              readOnly: true
              subPath: config.yml
            - mountPath: /media/frigate
              name: media
            - mountPath: /dev/shm
              name: shm
        - env:
            - name: OAUTH2_PROXY_HTTP_ADDRESS
              value: 0.0.0.0:4180
            - name: OAUTH2_PROXY_METRICS_ADDRESS
              value: 0.0.0.0:44180
            - name: OAUTH2_PROXY_UPSTREAMS
              value: http://localhost:5000
            - name: OAUTH2_PROXY_PROVIDER
              value: oidc
            - name: OAUTH2_PROXY_CODE_CHALLENGE_METHOD
              value: S256
            - name: OAUTH2_PROXY_SKIP_PROVIDER_BUTTON
              value: "true"
            - name: OAUTH2_PROXY_EMAIL_DOMAINS
              value: '*'
            - name: OAUTH2_PROXY_SET_XAUTHREQUEST
              value: "true"
            - name: OAUTH2_PROXY_PASS_USER_HEADERS
              value: "true"
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.15.5@sha256:8498b0d0ef0a7b29686414000a08aee467f02d0299c9ed1e006a8f33fc017916
          livenessProbe:
            httpGet:
              path: /ping
              port: 4180
          name: oauth
          readinessProbe:
            httpGet:
              path: /ready
              port: 4180
          resources:
            requests:
              cpu: 1m
              memory: 10Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /tmp
              name: tmp
      volumes:
        - emptyDir:
            medium: Memory
            sizeLimit: 1Gi
          name: cache
        - name: config
          persistentVolumeClaim:
            claimName: frigate-config
        - configMap:
            name: frigate
          name: config-file
        - name: media
          persistentVolumeClaim:
            claimName: frigate-media
        - emptyDir:
            medium: Memory
            sizeLimit: 1Gi
          name: shm
        - emptyDir: {}
          name: tmp
