clusters/cl01tl/manifests/frigate/Service-frigate.yaml
apiVersion: v1
kind: Service
metadata:
  name: frigate
  labels:
    app.kubernetes.io/instance: frigate
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: frigate
    app.kubernetes.io/service: frigate
    helm.sh/chart: frigate-5.2.1
  namespace: frigate
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
      name: http
    - port: 4180
      targetPort: 4180
      protocol: TCP
      name: oauth
    - port: 44180
      targetPort: 44180
      protocol: TCP
      name: oauth-metrics
    - port: 8554
      targetPort: 8554
      protocol: TCP
      name: rtsp
    - port: 8555
      targetPort: 8555
      protocol: TCP
      name: webrtc
    - port: 8555
      targetPort: 8555
      protocol: UDP
      name: webrtc-udp
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: frigate
    app.kubernetes.io/name: frigate
