clusters/cl01tl/manifests/frigate/HTTPRoute-frigate.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frigate
  labels:
    app.kubernetes.io/instance: frigate
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: frigate
    helm.sh/chart: frigate-5.2.1
  annotations:
    gethomepage.dev/description: Frigate
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Platform
    gethomepage.dev/icon: sh-frigate.webp
    gethomepage.dev/name: NVR
    gethomepage.dev/siteMonitor: http://frigate.frigate:80
    gethomepage.dev/statusStyle: dot
    gethomepage.dev/weight: "200"
  namespace: frigate
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: "traefik"
  hostnames:
    - "frigate.alexlebens.dev"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: frigate
          namespace: frigate
          port: 4180
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
